Revert to Java 11